--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eleme-app",
+  "name": "vue2-eleme-app",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "erchoc",
