--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "better-scroll": "^1.11.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
-    "axios": "^0.18.0"
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
